<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Deshortener</string>
    <string name="shortenedUrl">Shortened URL:</string>
    <string name="deshortenedUrl">Deshortened URL:</string>
    <string name="goBack">Go back</string>
    <string name="openUrl">Open URL</string>
    <string name="openErrorUrl">Open %s in browser</string>
    <string name="app_info">This application will be started when another application opens a shortened url in the browser.</string>
    <string name="trustDomain">Trust domain %s</string>
    <string name="trustUrl">Trust %s URL</string>
    <string name="toastMsgOpenTrusted">Opened trusted URL %s</string>
    <string name="clearTrust">Clear trusted domains and URLs</string>
    <string name="trustedCleared">Trusted domains and URLs were cleared</string>
    <string name="deshorten">Deshorten</string>
    <string name="showsPreview">URL shortener shows a preview itself. It should be safe to open it.</string>
    <string name="networkError">Unable to deshorten the URL due to a network problem.</string>
    <string name="unableToDeshorten">Could not deshorten the url.</string>
    <string name="homepage">Homepage</string>
    <string name="info">Info</string>
    <string name="license">		\nThis is distributed in the hope that it will be useful, but without any warranty; without even the implied warranty of merchantability or fitness for a particular purpose. See the GNU General Public License for more details.\n</string>
    <string name="infoDialogTitle">Info:</string>
    <string name="infoDialogCloseButton">Close</string>

    <item name="homepageUrl" format="string" type="string">https://code.google.com/p/deshortener</item>

</resources>